    (Zoran Dimitrijevic via raviprak)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

    HADOOP-9658. SnappyCodec#checkNativeCodeLoaded may unexpectedly fail when
    native code is not loaded. (Zhijie Shen via ozawa)

    HADOOP-11663. Remove description about Java 6 from docs.
    (Masatake Iwasaki via aajisaka)

    HADOOP-11814. Reformat hadoop-annotations, o.a.h.classification.tools.
    (Li Lu via wheat9)

  OPTIMIZATIONS

    HADOOP-11966. Variable cygwin is undefined in hadoop-config.sh when executed
    through hadoop-daemon.sh. (cnauroth)

    HADOOP-11973. Ensure ZkDelegationTokenSecretManager namespace znodes get
    created with ACLs. (Gregory Chanan via asuresh)

    HADOOP-12058. Fix dead links to DistCp and Hadoop Archives pages.
    (Kazuho Fujii via aajisaka)

    HADOOP-12078. The default retry policy does not handle RetriableException
    correctly. (Arpit Agarwal)

    HADOOP-12100. ImmutableFsPermission should not override applyUmask since
    that method doesn't modify the FsPermission (Bibin A Chundatt via Colin P.
    McCabe)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES

    HADOOP-10530 Make hadoop build on Java7+ only (stevel)

  NEW FEATURES
    HADOOP-3733 "s3:" URLs break when Secret Key contains a slash, even if encoded
    (Altiscale patch, dchaiken, raviprak)

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-9629. Support Windows Azure Storage - Blob as a file system in Hadoop.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,